# pythomat

./: README.md  b64encode.py  cms.py  moodle.py  prog2.py  pyproject.toml  pythomat.ini  pythomat.py  pythomat.sh  setup.py
